--- a/app/portfolio.html
+++ b/app/portfolio.html
@@ -30,9 +30,9 @@
 
     <header class="header">
 
-        <div class="header__container header__container--portfolio">
+        <div class="header__container-sub">
 
-            <div class="nav-bar">
+            <div class="nav-bar" style="background: #0F0F0F;height: 70px;">
                 <div class="nav-bar__container row">
                     <a href="index.html" class="nav-bar__logo-link">
                         <img src="assets/images/kjk-white.png" alt="logo" class="nav-bar__logo">
@@ -53,7 +53,7 @@
                 </div>
             </div>
 
-            <div class="header__text-container row ">
+            <!-- <div class="header__text-container row ">
 
                 <div class="header__text__box">
                     <svg viewBox="0 0 409 436" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -70,7 +70,7 @@
                     We make Cutting-Edge Web and Mobile Solutions
                 </p>
 
-            </div>
+            </div> -->
 
             <div class="mobile-nav">
                 <img src="assets/images/mobile-map.png" class="mobile-nav__map" alt="">
@@ -401,9 +401,10 @@
         </div>
 
         <div class="portfolio-section__filter-container row">
-            <a href="" class="btn btn--primary portfolio-section__btn portfolio-section__btn--active">WEBSITES AND APPS</a>
+            <a href="" class="btn btn--primary portfolio-section__btn portfolio-section__btn--active">CASE STUDY</a>
+            <a href="" class="btn btn--primary portfolio-section__btn">PRODUCTS</a>
+            <a href="" class="btn btn--primary portfolio-section__btn">WEB/APP</a>
             <a href="" class="btn btn--primary portfolio-section__btn">BRANDING</a>
-            <a href="" class="btn btn--primary portfolio-section__btn">LOGO</a>
         </div>
 
     </section>
