--- a/app/work.html
+++ b/app/work.html
@@ -17,10 +17,15 @@
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700,900i&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Quicksand:300,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:600&display=swap" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="assets/styles/css/glide.core.min.css">
+    <link rel="stylesheet" href="assets/styles/css/glide.core.css">
+    <link rel="stylesheet" href="assets/styles/css/glide.theme.min.css"> -->
     <!-- build:js assets/scripts/Vendor.js -->
     <script src="temp/scripts/Vendor.js"></script>
     <!-- endbuild -->
     <script src="https://unpkg.com/scrollreveal"></script>
+    <!-- <script src="https://unpkg.com/@glidejs/glide"></script> -->
+
 
 </head>
 
@@ -63,10 +68,10 @@
                 </div>
 
                 <h1 class="header__title header__title--services">
-                    How We Work
+                    How we work
                 </h1>
                 <p class="header__text header__text--services">
-                    Experience Design, Web/App Development &amp; Branding
+                    We Make Cutting-Edge Web &amp; Mobile Solutions 
                 </p>
 
             </div>
@@ -493,8 +498,8 @@
         </div>
 
     </section>
-
-    <!-- <section>
+<!-- 
+    <section>
         <div class="gallery">
             <h2 class="title" >
                 Gallery
