--- a/app/quote.html
+++ b/app/quote.html
@@ -382,7 +382,7 @@
                     <div class="quote__list-container">
                         <img src="assets/images/bullet-pro.png" class="quote__list-img" alt="">
                         <h3 class="quote__sub-title">
-                            <span>1.</span> Consultation
+                             Consultation
                         </h3>
                         <p class="quote__text">
                             Before we start your project, we set up a meeting to find out your needs 
@@ -393,7 +393,7 @@
                     <div class="quote__list-container">
                         <img src="assets/images/bullet-pro.png" class="quote__list-img" alt="">
                         <h3 class="quote__sub-title">
-                            <span>2.</span> Regular Update
+                             Regular Update
                         </h3>
                         <p class="quote__text">
                             You will get prompt notification all through the product development cycle.
@@ -402,7 +402,7 @@
                     <div class="quote__list-container">
                         <img src="assets/images/bullet-pro.png" class="quote__list-img" alt="">
                         <h3 class="quote__sub-title">
-                            <span>3.</span> After service
+                            After service
                         </h3>
                         <p class="quote__text">
                             After the completion of the customized software, 
@@ -442,7 +442,7 @@
                                 <label class="quote-form__label" for="quote-form__estimate">Estimated Budget</label>
                             </div>
                             <div class="quote-form__input-container">
-                                <textarea name="" autocomplete="off" required class="quote-form__input" id="quote-form__description" cols="30" rows="6"></textarea>
+                                <textarea name="" autocomplete="off" required class="quote-form__input" id="quote-form__description" cols="30" rows="10"></textarea>
                                 <label class="quote-form__label" for="quote-form__description">Project Description</label>
                             </div>
 
