--- a/app/index.html
+++ b/app/index.html
@@ -951,13 +951,13 @@
 
             <div class="diff__container">
 
-                <div>
-                    <img src="assets/images/diffleft.png" alt="">
+                <div class="diff__left">
+                    <img src="assets/images/diffleft.png" class="diff__home-left"  alt="">
                     
                 </div>
                
-                <div>
-                    <img src="assets/images/diffbg2.png" class="diff__home-right" alt="">
+                <div style="position: relative;">
+                    <img src="assets/images/diffbg2.png" class="diff__home-right"  alt="">
                     <h3>We aid business transformation</h3>
                     <p>
                         A part of our value added service is business transformation consultation. 
