--- a/app/solutions.html
+++ b/app/solutions.html
@@ -372,12 +372,14 @@
     
     <section class="">
         <img src="assets/images/solcircle.png" alt="" class="solutions__bg--top">
-    
+        <img src="assets/images/solutionsbgtop.png" alt="" class="solutions__bg--zero">
         <div class="solutions__row">
             <div class="">
                 <div class="solutions__hero">
-                    <img src="assets/images/bulb.png" alt="">
-                    <div>
+                    <div class="solution__left">
+                        <img src="assets/images/bulb.png" alt="">
+                    </div>
+                    <div class="solutions__right">
                     <h2 class="title">
                         Solutions
                     </h2>
