--- a/app/index.html
+++ b/app/index.html
@@ -186,17 +186,17 @@
                                 </div>
                                 <div class="mobile-nav--flex">
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a href="trudata.ng" class="mobile-nav__title mobile-nav__title--small">
+                                        <a href="trudata.ng" target="_blank" class="mobile-nav__title mobile-nav__title--small">
                                             Tru-Data
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a href="tworeport.com" class="mobile-nav__title mobile-nav__title--small">
+                                        <a href="tworeport.com" target="_blank" class="mobile-nav__title mobile-nav__title--small">
                                             TwoReport
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a href="afiaanyi.com" class="mobile-nav__title mobile-nav__title--small">
+                                        <a href="www.afiaanyi.com" class="mobile-nav__title mobile-nav__title--small">
                                             Afiaanyi
                                         </a>
                                     </div>
@@ -363,7 +363,7 @@
 
             <div class="header__text-container row ">
                 <h1 class="header__title ">
-                    <span class="header__title--sub">We are a Software</span>
+                    <span class="header__title--sub header__italics">We are a Software</span>
                     
 
                     <svg class="header__development " viewBox="0 0 364 62 " fill="none " xmlns="http://www.w3.org/2000/svg ">
@@ -645,8 +645,8 @@
                     <span class="header__title--sub">Company</span>
                 </h1>
                 <p class="header__text ">
-                    You can <span class="header__italics">REFINE</span>  your BRAND identity and <span class="header__italics">BUILD</span> out a <br class="header__break">
-                    POWERFUL TECHNOLOGY suite for your business with KJK Africa.
+                    You can <span class="header__italics">refine</span>  your brand identity and <span class="header__italics">build</span> out a <br class="header__break">
+                    powerful technology suite for your business.
                 </p>
                 <a href="quote.html" class="btn btn--gradient btn--link btn--header ">
                     <img src="assets/images/play.png " class="btn__img btn__img--header " alt=" "> TELL US ABOUT YOUR PROJECT
@@ -745,7 +745,7 @@
 
                 </div>
 
-                <!-- <div class="swiper-slide">
+                <div class="swiper-slide">
                     <div class="portfolio__container row">
                         <div class="portfolio__item portfolio__item--left ">
 
@@ -766,7 +766,27 @@
                         </div>
                     </div>
 
-                </div> -->
+                </div> 
+                <div class="swiper-slide">
+                    <div class="portfolio__container row">
+                        <div class="portfolio__item portfolio__item--left ">
+
+                            <h2 class="title ">
+                                MOM foundation
+                            </h2>
+                            <p class="content ">
+                                Mountain of Mordecai is a charity organisation that focuses on delivering aid to children living in slums around Lagos.
+                            </p>
+                            <a href="# " class="btn btn--link btn--primary btn--upper-space  btn--hover">
+                                <img src="assets/images/play-slim.png " style="width:8px " class="btn__img btn__img--small" alt=" "> READ MORE
+                            </a>
+                        </div>
+                        <div class="portfolio__item portfolio__item--right ">
+                            <img src="assets/images/momfoundation.png " style="width: 83%; " alt=" " class="portfolio__mark-up ">
+                        </div>
+                    </div>
+
+                </div> 
             </div>
 
             <div class="swiper-pagination"></div>
