--- a/app/index.html
+++ b/app/index.html
@@ -208,7 +208,7 @@
                                 <div class="mobile-nav--flex">
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
                                         <a href="trudata.ng" target="_blank" class="mobile-nav__title mobile-nav__title--small">
-                                            Tru-Data
+                                            Tru-DATA
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
@@ -240,7 +240,7 @@
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
                                         <a href="ourworks.html" class="mobile-nav__title mobile-nav__title--small">
-                                            Eduportal
+                                            EduPortal
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
@@ -1091,7 +1091,7 @@
                         <a href="contact.html" class="footer__link ">
                             Contact Us
                         </a>
-                        <a href="blog.html" class="footer__link ">
+                        <a href="blog.html" class="footer__link xpad">
                             Blog
                         </a>
                     </div>
