--- a/app/who.html
+++ b/app/who.html
@@ -206,7 +206,7 @@
                                 <div class="mobile-nav--flex">
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
                                         <a href="trudata.ng" class="mobile-nav__title mobile-nav__title--small">
-                                            Tru-Data
+                                            Tru-DATA
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
@@ -238,7 +238,7 @@
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
                                         <a href="ourworks.html" class="mobile-nav__title mobile-nav__title--small">
-                                            Eduportal
+                                            EduPortal
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
