--- a/app/about.html
+++ b/app/about.html
@@ -215,7 +215,7 @@ gtag('config', 'UA-159861942-1');
                                 <div class="mobile-nav--flex">
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
                                         <a href="trudata.ng" class="mobile-nav__title mobile-nav__title--small">
-                                            Tru-Data
+                                            Tru-DATA
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
@@ -247,7 +247,7 @@ gtag('config', 'UA-159861942-1');
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
                                         <a href="ourworks.html" class="mobile-nav__title mobile-nav__title--small">
-                                            Eduportal
+                                            EduPortal
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
