--- a/app/team.html
+++ b/app/team.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>
-        kjk
+        Meet the Team
     </title>
     <!-- build:css assets/styles/styles.css -->
     <link rel="stylesheet" href="temp/styles/styles.css">
@@ -23,19 +23,7 @@
     <script src="https://unpkg.com/scrollreveal"></script>
 
 </head>
-<!--Start of Tawk.to Script-->
-<script type="text/javascript">
-    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-    (function(){
-    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-    s1.async=true;
-    s1.src='https://embed.tawk.to/5e620ee58d24fc2265861e54/default';
-    s1.charset='UTF-8';
-    s1.setAttribute('crossorigin','*');
-    s0.parentNode.insertBefore(s1,s0);
-    })();
-    </script>
-    <!--End of Tawk.to Script-->
+
     
 <body id="about">
 
@@ -206,7 +194,7 @@
                                 <div class="mobile-nav--flex">
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
                                         <a href="trudata.ng" class="mobile-nav__title mobile-nav__title--small">
-                                            Tru-Data
+                                            Tru-DATA
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
@@ -238,7 +226,7 @@
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
                                         <a href="ourworks.html" class="mobile-nav__title mobile-nav__title--small">
-                                            Eduportal
+                                            EduPortal
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
@@ -1467,7 +1455,19 @@
     <!-- build:js assets/scripts/App.js -->
     <script src="temp/scripts/App.js "></script>
     <!-- endbuild -->
-
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/5e620ee58d24fc2265861e54/default';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
+    </script>
+    <!--End of Tawk.to Script-->
 </body>
 
 
