latest footer update

--- a/app/about.html
+++ b/app/about.html
@@ -46,9 +46,7 @@ gtag('config', 'UA-159861942-1');
                         <img src="assets/images/kjk-white.png" alt="logo" class="nav-bar__logo">
                     </a>
                     <div class="nav-bar__right-content-container">
-                        <a href="https://www.kjk.com.ng/cmsdemo/AdminPage/login" target="_blank" class="nav-bar__link">
-                            KJK CMS Demo
-                        </a>
+                        
                         <a href="contact.html" class="nav-bar__link">
                             Contact us
                         </a>
@@ -642,7 +640,7 @@ gtag('config', 'UA-159861942-1');
                         <a href="portfolio.html" class="footer__link ">
                             Portfolio
                         </a>
-                        <a href="contact.html" class="footer__link">
+                        <a href="contact.html" class="footer__link ">
                             Contact Us
                         </a>
                         <a href="blog.html" class="footer__link xpad">
@@ -650,6 +648,9 @@ gtag('config', 'UA-159861942-1');
                         </a>
                     </div>
                     <div class="footer__lower-right">
+                        <a href="https://www.linkedin.com/company/kjkafrica/" target="_blank" class="">
+                            <img src="assets/images/linkedin-gradient.png" style="width:10px " alt=" " class="footer__link__logo ">
+                        </a>
                         <a href="https://www.instagram.com/kjk.com.ng/" target="_blank" class="">
                             <img src="assets/images/instagram.png " style="width:10px " alt=" " class="footer__link__logo ">
                         </a>
