--- a/app/contact.html
+++ b/app/contact.html
@@ -579,7 +579,7 @@ gtag('config', 'UA-159861942-1');
                         <a href="portfolio.html" class="footer__link ">
                             Portfolio
                         </a>
-                        <a href="contact.html" class="footer__link active">
+                        <a href="contact.html" class="footer__link ">
                             Contact Us
                         </a>
                         <a href="blog.html" class="footer__link xpad">
@@ -587,6 +587,9 @@ gtag('config', 'UA-159861942-1');
                         </a>
                     </div>
                     <div class="footer__lower-right">
+                        <a href="https://www.linkedin.com/company/kjkafrica/" target="_blank" class="">
+                            <img src="assets/images/linkedin-gradient.png" style="width:10px " alt=" " class="footer__link__logo ">
+                        </a>
                         <a href="https://www.instagram.com/kjk.com.ng/" target="_blank" class="">
                             <img src="assets/images/instagram.png " style="width:10px " alt=" " class="footer__link__logo ">
                         </a>
