--- a/app/index.html
+++ b/app/index.html
@@ -1069,6 +1069,9 @@
                         </a>
                     </div>
                     <div class="footer__lower-right">
+                        <a href="https://www.linkedin.com/company/kjkafrica/" target="_blank" class="">
+                            <img src="assets/images/linkedin-gradient.png" style="width:10px " alt=" " class="footer__link__logo ">
+                        </a>
                         <a href="https://www.instagram.com/kjk.com.ng/" target="_blank" class="">
                             <img src="assets/images/instagram.png " style="width:10px " alt=" " class="footer__link__logo ">
                         </a>
