--- a/app/services.html
+++ b/app/services.html
@@ -719,7 +719,7 @@ gtag('config', 'UA-159861942-1');
                         <a href="work.html" class="footer__link ">
                             How we work
                         </a>
-                        <a href="services.html" class="footer__link active">
+                        <a href="services.html" class="footer__link ">
                             Our Services
                         </a>
                         <a href="portfolio.html" class="footer__link ">
@@ -733,6 +733,9 @@ gtag('config', 'UA-159861942-1');
                         </a>
                     </div>
                     <div class="footer__lower-right">
+                        <a href="https://www.linkedin.com/company/kjkafrica/" target="_blank" class="">
+                            <img src="assets/images/linkedin-gradient.png" style="width:10px " alt=" " class="footer__link__logo ">
+                        </a>
                         <a href="https://www.instagram.com/kjk.com.ng/" target="_blank" class="">
                             <img src="assets/images/instagram.png " style="width:10px " alt=" " class="footer__link__logo ">
                         </a>
