--- a/app/who.html
+++ b/app/who.html
@@ -557,7 +557,7 @@
                         spectacular products/services, here are a few significant 
                         reasons why you should collaborate with us.
                     </p>
-                    <ul style="width: 91%;">
+                    <ul style="width: 98%;">
                         <li>Ease of business</li>
                         <li>Minimal Risk</li>
                         <li>Competence</li>
@@ -597,7 +597,7 @@
                             <img src="assets/images/kjk-black.png" alt=" " class="footer__link__logo">
                         </a>
                         <a href="about.html" class="footer__link ">
-                            who we are
+                            Who we are
                         </a>
                         <a href="work.html" class="footer__link ">
                             How we work
@@ -611,11 +611,14 @@
                         <a href="contact.html" class="footer__link ">
                             Contact Us
                         </a>
-                        <a href="blog.html" class="footer__link ">
+                        <a href="blog.html" class="footer__link xpad">
                             Blog
                         </a>
                     </div>
                     <div class="footer__lower-right">
+                        <a href="https://www.linkedin.com/company/kjkafrica/" target="_blank" class="">
+                            <img src="assets/images/linkedin-gradient.png" style="width:10px " alt=" " class="footer__link__logo ">
+                        </a>
                         <a href="https://www.instagram.com/kjk.com.ng/" target="_blank" class="">
                             <img src="assets/images/instagram.png " style="width:10px " alt=" " class="footer__link__logo ">
                         </a>
@@ -626,7 +629,7 @@
                             <img src="assets/images/facebook.png " alt=" " style="width:5px " class="footer__link__logo ">
                         </a>
                         <span class="footer__text__lower ">
-                         KJK Africa - 2019. All rights reserved
+                         All rights reserved to KJK.Africa &copy; 2020. 
                         </span>
                     </div>
                 </div>
