--- a/app/portfolio.html
+++ b/app/portfolio.html
@@ -569,7 +569,6 @@ gtag('config', 'UA-159861942-1');
         </div>
 
     </section>
-
     <footer class="footer ">
 
         <div class="footer__container">
@@ -581,7 +580,7 @@ gtag('config', 'UA-159861942-1');
                         spectacular products/services, here are a few significant 
                         reasons why you should collaborate with us.
                     </p>
-                    <ul>
+                    <ul style="width: 98%;">
                         <li>Ease of business</li>
                         <li>Minimal Risk</li>
                         <li>Competence</li>
@@ -612,7 +611,7 @@ gtag('config', 'UA-159861942-1');
             <div class="footer__lower-content ">
 
                 <form class="footer__input-container">
-                    <input class="footer__input" placeholder="Email Address" type="email" required aria-required="true">
+                    <input class="footer__input" placeholder="Enter E-mail to sign up for our newsletter" type="email" required aria-required="true">
                     <input type="submit" class="footer__submit" value="Subscribe">
                 </form>
                 <div class="footer__lower-links row">
@@ -621,7 +620,7 @@ gtag('config', 'UA-159861942-1');
                             <img src="assets/images/kjk-black.png" alt=" " class="footer__link__logo">
                         </a>
                         <a href="about.html" class="footer__link ">
-                            About
+                            Who we are
                         </a>
                         <a href="work.html" class="footer__link ">
                             How we work
@@ -635,19 +634,25 @@ gtag('config', 'UA-159861942-1');
                         <a href="contact.html" class="footer__link ">
                             Contact Us
                         </a>
+                        <a href="blog.html" class="footer__link xpad">
+                            Blog
+                        </a>
                     </div>
                     <div class="footer__lower-right">
-                        <a href="https://www.instagram.com/kjk.com.ng/" target="_blank" class="footer__link ">
-                            <img src="assets/images/instagram.png " style="width:20px " alt=" " class="footer__link__logo ">
+                        <a href="https://www.linkedin.com/company/kjkafrica/" target="_blank" class="">
+                            <img src="assets/images/linkedin-gradient.png" style="width:10px " alt=" " class="footer__link__logo ">
                         </a>
-                        <a href="https://twitter.com/KJKAfrica" class="footer__link " target="_blank">
-                            <img src="assets/images/twitter.png " alt=" " style="width:20px " class="footer__link__logo ">
+                        <a href="https://www.instagram.com/kjk.com.ng/" target="_blank" class="">
+                            <img src="assets/images/instagram.png " style="width:10px " alt=" " class="footer__link__logo ">
                         </a>
-                        <a href="https://www.facebook.com/kjkcomng" target="_blank" class="footer__link " target="_blank">
-                            <img src="assets/images/facebook.png " alt=" " style="width:9px " class="footer__link__logo ">
+                        <a href="https://twitter.com/KJKAfrica" class="" target="_blank">
+                            <img src="assets/images/twitter.png " alt=" " style="width:10px " class="footer__link__logo ">
+                        </a>
+                        <a href="https://www.facebook.com/kjkcomng" target="_blank" class="" target="_blank">
+                            <img src="assets/images/facebook.png " alt=" " style="width:5px " class="footer__link__logo ">
                         </a>
                         <span class="footer__text__lower ">
-                            &COPY; KJK Africa - 2019. All rights reserved
+                         All rights reserved to KJK.Africa &copy; 2020. 
                         </span>
                     </div>
                 </div>
