--- a/app/portfolio.html
+++ b/app/portfolio.html
@@ -203,8 +203,8 @@ gtag('config', 'UA-159861942-1');
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a  href="https://www.apriltravelsng.com" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
-                                            April Travels
+                                        <a  href="https://www.mantleofmordecai.org" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
+                                            MOM Foundation
                                         </a>
                                     </div>
                                 </div>
@@ -230,8 +230,8 @@ gtag('config', 'UA-159861942-1');
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a  href="https://www.apriltravelsng.com" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
-                                            April Travels
+                                        <a  href="https://www.mantleofmordecai.org" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
+                                            MOM Foundation
                                         </a>
                                     </div>
                                 </div>
@@ -307,11 +307,11 @@ gtag('config', 'UA-159861942-1');
                                         Travel and Tourism
                                     </a>
                                 </div>
-                                <div class="mobile-nav__list-item mobile-nav__list-item--small ">
+                                <!-- <div class="mobile-nav__list-item mobile-nav__list-item--small ">
                                     <a href="soutions.html" class="mobile-nav__title mobile-nav__title--small mobile__list-dot">
                                         School and Management
                                     </a>
-                                </div>
+                                </div> -->
                             </div>
                             
                         </div>
