--- a/app/quote.html
+++ b/app/quote.html
@@ -189,8 +189,8 @@
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a  href="https://www.apriltravelsng.com" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
-                                            April Travels
+                                        <a  href="https://www.mantleofmordecai.org" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
+                                            MOM Foundation
                                         </a>
                                     </div>
                                 </div>
@@ -216,8 +216,8 @@
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
-                                        <a  href="https://www.apriltravelsng.com" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
-                                            April Travels
+                                        <a  href="https://www.mantleofmordecai.org" target="_blank" class="mobile-nav__title mobile-nav__title--small xmargin">
+                                            MOM Foundation
                                         </a>
                                     </div>
                                 </div>
@@ -293,11 +293,11 @@
                                         Travel and Tourism
                                     </a>
                                 </div>
-                                <div class="mobile-nav__list-item mobile-nav__list-item--small ">
+                                <!-- <div class="mobile-nav__list-item mobile-nav__list-item--small ">
                                     <a href="soutions.html" class="mobile-nav__title mobile-nav__title--small mobile__list-dot">
                                         School and Management
                                     </a>
-                                </div>
+                                </div> -->
                             </div>
                             
                         </div>
