--- a/app/who.html
+++ b/app/who.html
@@ -70,7 +70,8 @@
                     Who we are
                 </h1>
                 <p class="header__text header__text--services">
-                    We Make Cutting-Edge Web and Mobile Solutions
+                    We Make Cutting-Edge Web, Mobile &amp; Enterprise Solutions
+                    
                 </p>
 
             </div>
@@ -180,7 +181,7 @@
                                 <div class="mobile-nav--flex">
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
                                         <a href="https://www.tru-data.com" target="_blank" class="mobile-nav__title mobile-nav__title--small">
-                                            Tru-DATA
+                                            tru-DATA
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
