--- a/app/blog-story.html
+++ b/app/blog-story.html
@@ -173,7 +173,7 @@
                                 <div class="mobile-nav--flex">
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
                                         <a href="https://www.tru-data.com" target="_blank" class="mobile-nav__title mobile-nav__title--small">
-                                            Tru-DATA
+                                            tru-DATA
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
