--- a/app/portfolio.html
+++ b/app/portfolio.html
@@ -189,7 +189,7 @@ gtag('config', 'UA-159861942-1');
                                 <div class="mobile-nav--flex">
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
                                         <a href="https://www.tru-data.com" target="_blank" class="mobile-nav__title mobile-nav__title--small">
-                                            Tru-DATA
+                                            tru-DATA
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
