--- a/app/solutions.html
+++ b/app/solutions.html
@@ -77,7 +77,8 @@ gtag('config', 'UA-159861942-1');
                     Solutions
                 </h1>
                 <p class="header__text header__text--services">
-                    We Make Cutting-Edge Web and Mobile Solutions
+                    We Make Cutting-Edge Web, Mobile &amp; Enterprise Solutions
+
                 </p>
 
             </div>
@@ -187,7 +188,7 @@ gtag('config', 'UA-159861942-1');
                                 <div class="mobile-nav--flex">
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
                                         <a href="https://www.tru-data.com" target="_blank" class="mobile-nav__title mobile-nav__title--small">
-                                            Tru-DATA
+                                            tru-DATA
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
