--- a/app/team.html
+++ b/app/team.html
@@ -69,7 +69,7 @@
                     Our Team
                 </h1>
                 <p class="header__text header__text--services">
-                    We Make Cutting-Edge Web and Mobile Solutions
+                    We Make Cutting-Edge Web, Mobile &amp; Enterprise Solutions
                 </p>
 
             </div>
@@ -178,7 +178,7 @@
                                 <div class="mobile-nav--flex">
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
                                         <a href="https://www.tru-data.com" target="_blank" class="mobile-nav__title mobile-nav__title--small">
-                                            Tru-DATA
+                                            tru-DATA
                                         </a>
                                     </div>
                                     <div class="mobile-nav__list-item mobile-nav__list-item--small">
