footer, menu,about us, how we work

--- a/app/index.html
+++ b/app/index.html
@@ -65,7 +65,7 @@
                         <a href="contact.html" class="nav-bar__link">
                             Contact us
                         </a>
-                        <a href="about.html" class="nav-bar__link">
+                        <a href="blog.html" class="nav-bar__link">
                             Blog
                         </a>
                         <a href="quote.html" class="nav-bar__link nav-bar__link--bg">
@@ -96,7 +96,7 @@
                                     </a>
                                 </div>
                                 <div class=" mobile-nav__list-item--header">
-                                    <a href="work.html" class="mobile-nav__title">
+                                    <a href="how-we-work.html" class="mobile-nav__title">
                                         How we work
                                     </a>
                                 </div>
@@ -111,7 +111,7 @@
                                     </a>
                                 </div>
                                 <div class="mobile-nav__list-item--header">
-                                    <a href="work.html" class="mobile-nav__title ">
+                                    <a href="geek-capital.html" class="mobile-nav__title ">
                                         Geek Capital
                                     </a>
                                 </div>
@@ -282,6 +282,11 @@
                             <div class="mobile-nav__list mobile-nav--resp">
                                 <div class="mobile-nav__list-item mobile-nav__list-item--header">
                                     <a href="solutions.html" class="mobile-nav__title">
+                                        Industries
+                                    </a>
+                                </div>
+                                <div class="mobile-nav__list-item mobile-nav__list-item--small">
+                                    <a href="solutions.html" class="mobile-nav__title mobile-nav__title--small mobile__list-dot">
                                         Fin Tech
                                     </a>
                                 </div>
@@ -303,7 +308,7 @@
                                     </a>
                                 </div>
                                 <div class="mobile-nav__list-item mobile-nav__list-item--small ">
-                                    <a href="solutions.html" class="mobile-nav__title mobile-nav__title--small mobile__list-dot">
+                                    <a href="solutions.html" class="mobile-nav__title mobile-nav__title--small mobile__list-dot" >
                                         Real Estate
 
                                     </a>
@@ -378,7 +383,7 @@
                                 </div>
                                 <div class="mobile-nav__list-item mobile-nav__list-item--small mobile-nav__list-item--adjusted">
                                     <a href="https://www.facebook.com/kjkcomng" target="_blank" class="mobile-nav__title mobile-nav__title--small">
-                                        <img src="assets/images/fb-white.svg" style="width: 7px" class="mobile-nav__social-img" alt="">
+                                        <img src="assets/images/fb-white.svg" style="width: 9px" class="mobile-nav__social-img" alt="">
                                     </a>
                                     <a href="https://www.linkedin.com/company/kjk-com-ng" target="_blank" class="mobile-nav__title mobile-nav__title--small">
                                         <img src="assets/images/linkedin-white.svg" class="mobile-nav__social-img" alt="">
