--- a/app/index.html
+++ b/app/index.html
@@ -383,16 +383,16 @@
                                 </div>
                                 <div class="mobile-nav__list-item mobile-nav__list-item--small mobile-nav__list-item--adjusted">
                                     <a href="https://www.facebook.com/kjkcomng" target="_blank" class="mobile-nav__title mobile-nav__title--small">
-                                        <img src="assets/images/fb-white.svg" style="width: 9px" class="mobile-nav__social-img" alt="">
+                                        <img src="assets/images/facebook-gradient.png" style="width: 9px" class="mobile-nav__social-img" alt="">
                                     </a>
                                     <a href="https://www.linkedin.com/company/kjk-com-ng" target="_blank" class="mobile-nav__title mobile-nav__title--small">
-                                        <img src="assets/images/linkedin-white.svg" class="mobile-nav__social-img" alt="">
+                                        <img src="assets/images/linkedin-gradient.png" class="mobile-nav__social-img" alt="">
                                     </a>
                                     <a href="https://instagram.com/kjk.com.ng" target="_blank" class="mobile-nav__title mobile-nav__title--small">
-                                        <img src="assets/images/ins-white.svg" class="mobile-nav__social-img" alt="">
+                                        <img src="assets/images/instagram-gradient.png" class="mobile-nav__social-img" alt="">
                                     </a>
                                     <a href="https://twitter.com/KJKAfrica" target="_blank" class="mobile-nav__title mobile-nav__title--small">
-                                        <img src="assets/images/twitter-white.svg" class="mobile-nav__social-img " alt=" ">
+                                        <img src="assets/images/twitter-gradient.png" class="mobile-nav__social-img " alt=" ">
                                     </a>
                                 </div>
 
