--- a/app/recognition.html
+++ b/app/recognition.html
@@ -455,7 +455,8 @@
                         World Bank
                     </h2>
                     <p class="recognition__desc">
-                        <span class="">KJK Africa</span> received the GEM project award of $40,000 by the World Bank and FMTI (Federal Ministry of Industry, Trade, and Investments, Nigeria 
+                        <span class="">KJK Africa</span> received the GEM project award of $40,000 by the World Bank and 
+                        FMTI (Federal Ministry of Industry, Trade, and Investments, Nigeria.
                     </p>
                     <div class="recognition__btn">
                     <a href="#" class="recognition__btn btn btn--link btn--primary btn--upper-space  btn--hover" >
@@ -472,7 +473,8 @@
                         Forbes Africa
                     </h2>
                     <p class="recognition__desc">
-                        Our Founder,<span> Olajumoke Oduwole </span>, was listed on Forbes Africa’s 30 under 30, youngest bright minds in 2020 
+                        Our Founder,<span> Olajumoke Oduwole </span>, was listed on 
+                        Forbes Africa’s 30 under 30, youngest bright minds in 2020.
                     </p>
                     <div class="recognition__btn">
                     <a href="#" class="recognition__btn btn btn--link btn--primary btn--upper-space  btn--hover" >
@@ -642,7 +644,7 @@
                 </div>
                 <div class="recognition__card">
                     <div class="recognition__logo">
-                        <img src="assets/images/wita.png" alt="">
+                        <img class="wita" src="assets/images/wita.png" alt="">
                     </div>
                     <h2 class="title orange__text">
                         Women in Tech Africa
