--- a/app/services.html
+++ b/app/services.html
@@ -425,7 +425,7 @@ gtag('config', 'UA-159861942-1');
             <div class="services__container__img">
                 <div class="services__img">
                     <img src="assets/images/exp-design.jpg" alt="" class="services__img__inner-one">
-                    <img src="assets/images/tworeport.png" alt="" class="services__img__inner-two">
+                    <img src="assets/images/web.png" alt="" class="services__img__inner-two">
                 </div>
             </div>
 
@@ -527,7 +527,8 @@ gtag('config', 'UA-159861942-1');
             <div class="services__container__img services__container__img--space-added">
                 <div class="services__img">
                     <img src="assets/images/mobilebg.jpg" alt="" class="services__img__inner-one services__img__inner-one--shift">
-                    <img src="assets/images/afiaanyi-screen.png" alt="" class="services__img__inner-two services__img--resize">
+                    <img style="z-index: 1;" src="assets/images/afiaanyi-screen.png" alt="" class="services__img__inner-two services__img--resize">
+                    <img style="z-index: 0;right: 43%;width: 45%;" src="assets/images/mobile.png" alt="" class="services__img__inner-two services__img--resize">
                     <!-- <img src="assets/images/Mockup4.png" alt="" class="services__img__inner-two services__img__inner-two--mobile"> -->
                 
                 </div>
@@ -632,8 +633,8 @@ gtag('config', 'UA-159861942-1');
 
             <div class="services__container__img">
                 <div class="services__img">
-                    <img src="assets/images/blackbg.png" alt="" class="services__img__inner-one services__img__inner-one--floated">
-                    <img src="assets/images/jummyoffice.png" alt="" class="services__img__inner-two services__img__inner-two--left">
+                    <img src="assets/images/consultbg1.png" alt="" class="services__img__inner-one services__img__inner-one--floated">
+                    <img src="assets/images/jumoke5.png" alt="" class="services__img__inner-two services__img__inner-two--left">
                 </div>
             </div>
             <div class="services__container__text">
